[project]
name = "generative-ai-safety-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "captum>=0.8.0",
    "detoxify>=0.5.2",
    "fastapi>=0.116.1",
    "gliner>=0.2.21",
    "guardrails-ai>=0.4.2",
    "llamafirewall>=0.0.4",
    "nltk>=3.8.1",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.359",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyprojroot>=0.3.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
    "detect-secrets",
    "groq",
    "semantic-router",
    "tqdm",
    "dspy-ai",
    "instructor",
    "openai",
    "verdict",
    "datasets",
    "codeshield",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "sse_starlette",
    "httpx>=0.27.0",
    "alembic"
]
